# darkbot

./: .arcconfig  .arclint  .debug  .debug2  .gitignore  LICENSE  Makefile  READ.THIS  README  README.txt  VERSION  autogen.sh  bootstrap.sh  build.sh  build_small.sh  clean.sh  configure  darkbot-beta.tgz  distribute.sh  rebuild_all.sh  testing.sh
beta/: .cvsignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  VERSION  autogen.sh  bootstrap.sh  build.sh  config.status  configure  configure.ac  configure.lineno  distribute.sh  rebuild_all.sh
beta/autom4te.cache/: output.0  requests  traces.0
beta/dat/: .cvsignore  servers.ini  setup.ini  userlist.db
beta/docs/: AUTHORS  HACKING  INSTALL  README_UTILS  SETUP  TODO  WHATSNEW
beta/m4/: db_enable_command.m4  extensions.m4  minmax.m4  timespec.m4
beta/scripts/: .cvsignore  Setup
beta/source/: .cvsignore  Makefile  Makefile.am  Makefile.in  chan.c  chansrv.c  comm.c  config.h  config.h.in  configure.ac  convertdb.c  defines.h  defines.h.in  general.c  helpers.c  main.c  parse.c  permbans.c  prototypes.h  quiz.c  random.c  raw.c  seen.c  signals.c  sockets.c  stats.c  topics.c  url.c  users.c  vars.c  vars.h  web.c
beta/source/.deps/: chan.Po  chansrv.Po  comm.Po  general.Po  helpers.Po  main.Po  parse.Po  permbans.Po  quiz.Po  random.Po  raw.Po  reserved.Po  seen.Po  server.Po  signals.Po  sockets.Po  stats.Po  topics.Po  url.Po  users.Po  vars.Po  web.Po
beta/source/compat/: crypt.c  lstat.c  malloc.c  memset.c  nanosleep.c  realloc.c  snprintf.c  stat.c  strcasecmp.c  strcasestr.c  strndup.c  strspn.c  strstr.c  timespec.h  vfprintf.c  vsprintf.c
dat/: permbans.db  random.ini  servers.ini  setup.ini  userlist.db
docs/: AUTHORS  HACKING  INSTALL  INSTALL.txt  README_UTILS  SETUP  TODO  WHATSNEW  contributors.txt
m4/: db_enable_command.m4  extensions.m4
scripts/: .Launch  .Stripdb  .Stripdb2  .info  .runonce  AddServer  AddUser  Setup  check-integrity  dbcron  download-databases  kill.darkbot  live-update  restart.darkbot
source/: Makefile  Makefile.am  chan.c  chansrv.c  comm.c  configure.ac  convertdb.c  defines.h  general.c  helpers.c  main.c  parse.c  permbans.c  prototypes.h  quiz.c  random.c  raw.c  reserved.c  seen.c  server.c  signals.c  sockets.c  stats.c  topics.c  tree.c  tree.h  url.c  users.c  vars.c  vars.h  web.c  xmlame.c
source/compat/: crypt.c  memset.c  snprintf.c  strcasecmp.c  strcasestr.c  strspn.c  strstr.c  vfprintf.c
source/langs/: arabic.h  chinese.h  dutch.h  ebonics.h  english.h  french.h  german.h  greek.h  italian.h  lang.h  latin.h  latin2.h  norwegian.h  portuguese.h  romanian.h  russian.h  russian2.h  spanish.h  swedish.h  taiwanish.h
source/utils/: base64.c  base64.h  sasl.c  sasl.h
